--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,43 @@ __pycache__/
 
 # Node.js dependencies
 node_modules/
+
+# Testing
+**/*.test.js
+**/*.test.ts
+**/*.test.tsx
+**/*.test.jsx
+**/*.spec.js
+**/*.spec.ts
+**/*.spec.tsx
+**/*.spec.jsx
+__tests__/
+test/
+tests/
+coverage/
+
+# Build outputs
+dist/
+build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
